# opta

./: .gitignore  Anchor.toml  Butter_Options_Protocol_Documentation.docx  CLAUDE.md  Cargo.toml  DocsPage.jsx  FRONTEND_AUDIT_REPORT.md  FRONTEND_AUDIT_REPORT_2.md  HANDOFF.md  MIGRATION_LOG.md  Opta_Whitepaper_v1.md  README.md  skills-lock.json
app/: .env.example  .gitignore  index.html  package-lock.json  package.json  sync.sh  tsconfig.app.json  vite.config.ts
archive/: README.md
cpi-examples/: INTEGRATION-SPEC.md  README.md
crank/: README.md  autoCancelListings.ts  autoFinalize.ts  bot.ts  inspect-vault-tokens.ts  migrate-sol-feed.ts  migrate-tsla-feed.ts  package-lock.json  package.json  pricing-crank.ts  tsconfig.json  verify-smoke.ts
docs/: AUTO_FINALIZE_PLAN.md  FRONTEND-HANDOFF.md  PROTOCOL.md  README.md  UNIFIED_TRADE_MARKETPLACE_PLAN.md  V2_SECONDARY_FRONTEND_PLAN.md  V2_SECONDARY_LISTING_PLAN.md
programs/butter-options/: Cargo.toml
programs/butter-options/src/: errors.rs  events.rs  lib.rs
programs/butter-options/src/instructions/: burn_unsold_from_vault.rs  buy_resale.rs  claim_premium.rs  create_shared_vault.rs  deposit_to_vault.rs  exercise_from_vault.rs  exercise_option.rs  expire_option.rs  initialize_epoch_config.rs  initialize_pricing.rs  mint_from_vault.rs  mod.rs  purchase_from_vault.rs  purchase_option.rs  settle_market.rs  settle_vault.rs  update_pricing.rs  withdraw_from_vault.rs  withdraw_post_settlement.rs  write_option.rs
programs/butter-options/src/state/: mod.rs  position.rs  pricing.rs  shared_vault.rs  writer_position.rs
programs/butter-options/src/utils/: mod.rs  solmath_bridge.rs  time.rs
programs/opta-transfer-hook/: Cargo.toml
programs/opta-transfer-hook/src/: lib.rs
scripts/: buy-aapl.js  buy-for-smoke.ts  check-v2-metadata.ts  create-sample-markets.ts  debug-list-resale.ts  debug-purchase.ts  initialize-epoch-config.ts  read-pricing.ts  (+15 more)
(+224 files in other folders)
