[package]
name = "butter-options"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "butter_options"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["associated_token", "metadata", "token_2022", "token_2022_extensions"] }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"
spl-token-metadata-interface = "0.7.0"
butter-transfer-hook = { path = "../butter-transfer-hook", features = ["cpi"] }
solmath = { version = "0.1.2", default-features = false, features = ["bs"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
