[package]
name = "opta-transfer-hook"
version = "0.1.0"
description = "Transfer hook for Opta — blocks expired option token transfers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "opta_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1" }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
